--- a/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
@@ -1,25 +1,78 @@
-// Localizable.strings (English)
+// Localizable.strings (Russian)
 
-"navigation.settings" = "Settings";
-"navigation.back" = "Back";
-"settings.notifications" = "Notifications";
-"settings.tasks" = "Tasks";
-"settings.watchFaceLibrary" = "Watch Face Library";
-"settings.watchFace" = "Watch Face";
-"settings.categories" = "Categories";
+"navigation.settings" = "Настройки";
+"navigation.back" = "Назад";
+"navigation.done" = "Готово";
+"navigation.cancel" = "Отмена";
 
-"notifications.title" = "Notifications";
-"notifications.reminderTime" = "Remind before";
-"notifications.footer" = "Important notifications will play even in Do Not Disturb mode";
-"notifications.time.oneMinute" = "1 minute";
-"notifications.time.fiveMinutes" = "5 minutes";
-"notifications.time.tenMinutes" = "10 minutes";
-"notifications.time.fifteenMinutes" = "15 minutes";
-"notifications.time.thirtyMinutes" = "30 minutes";
-"notifications.time.oneHour" = "1 hour";
-"notifications.testing.title" = "Testing";
-"notifications.testing.testButton" = "Test notification";
-"notifications.alert.title" = "Permission Required";
-"notifications.alert.settings" = "Settings";
-"notifications.alert.cancel" = "Cancel";
-"notifications.alert.message" = "Permission is required to send notifications. Please open the app settings and enable notifications.";
+
+"settings.notifications" = "Уведомления";
+"settings.tasks" = "Задачи";
+"settings.watchFaceLibrary" = "Библиотека циферблатов";
+"settings.watchFace" = "Циферблат";
+"settings.categories" = "Категории";
+
+"notifications.title" = "Уведомления";
+"notifications.reminderTime" = "Напоминать за";
+"notifications.footer" = "Важные уведомления будут проигрываться даже в режиме «Не беспокоить»";
+"notifications.time.oneMinute" = "1 минута";
+"notifications.time.fiveMinutes" = "5 минут";
+"notifications.time.tenMinutes" = "10 минут";
+"notifications.time.fifteenMinutes" = "15 минут";
+"notifications.time.thirtyMinutes" = "30 минут";
+"notifications.time.oneHour" = "1 час";
+"notifications.testing.title" = "Тестирование";
+"notifications.testing.testButton" = "Проверить уведомление";
+"notifications.alert.title" = "Требуется разрешение";
+"notifications.alert.settings" = "Настройки";
+"notifications.alert.cancel" = "Отмена";
+"notifications.alert.message" = "Для отправки уведомлений необходимо разрешение. Пожалуйста, откройте настройки приложения и включите уведомления.";
+
+"settingsTask.moveUnfinished" = "Переносить невыполненные задачи";
+"settingsTask.increasePriority" = "Повышать приоритет при переносе";
+"settingsTask.priorityFrequency" = "Частота повышения приоритета";
+"settingsTask.sectionHeader" = "Перенос задач";
+"settingsTask.sectionFooter" = "Невыполненные задачи будут автоматически переноситься на текущий день при смене даты. При включении повышения приоритета задачи будут повышать свой приоритет согласно выбранной частоте.";
+"settingsTask.navTitle" = "Настройки задач";
+"settingsTask.frequencyEveryDay" = "Каждый день";
+"settingsTask.frequencyEveryTwoDays" = "Раз в два дня";
+"settingsTask.frequencyEveryThreeDays" = "Раз в три дня";
+
+"categoryEditor.name" = "Название";
+"categoryEditor.newCategory" = "Новая категория";
+"categoryEditor.editCategory" = "Редактирование категории";
+"categoryEditor.changeIcon" = "Изменить иконку";
+"categoryEditor.changeColor" = "Изменить цвет";
+"categoryEditor.categoryHidden" = "Категория скрыта";
+"categoryEditor.categoryVisible" = "Категория видима";
+"categoryEditor.show" = "Показать";
+"categoryEditor.hide" = "Скрыть";
+"categoryEditor.addCategory" = "Добавить категорию";
+"categoryEditor.deleteCategory" = "Удалить категорию";
+"categoryEditor.deleteAlertTitle" = "Удалить категорию?";
+"categoryEditor.deleteAlertMessage" = "Все задачи в этой категории также будут удалены";
+"categoryEditor.cancel" = "Отмена";
+"categoryEditor.done" = "Готово";
+"categoryEditor.colorPickerTitle" = "Выбор цвета";
+"categoryEditor.ready" = "Готово";
+"categoryEditor.categoryNamePlaceholder" = "Название категории";
+"categoryEditor.selectColor" = "Выберите цвет";
+"categoryEditor.add" = "Добавить";
+
+"categoryEditor.iconPicker.iconSelection" = "Выбор иконки";
+"categoryEditor.iconPicker.searchIcon" = "Поиск иконки";
+
+"categoryEditor.dockBar.all" = "Все";
+"categoryEditor.dockBar.workAndEducation" = "Работа и учеба";
+"categoryEditor.dockBar.homeAndFamily" = "Дом и семья";
+"categoryEditor.dockBar.creativity" = "Творчество";
+"categoryEditor.dockBar.shopping" = "Покупки";
+"categoryEditor.dockBar.travel" = "Путешествия";
+"categoryEditor.dockBar.planning" = "Планирование";
+"categoryEditor.dockBar.communication" = "Общение";
+"categoryEditor.dockBar.tools" = "Инструменты";
+
+"archive.title" = "Архив выполненных задач";
+
+"taskTimeLine.title" = "Нет задач на этот день";
+"taskTimeLine.categoryNotFound" = "Категория не найдена";
