--- a/TaskFl0w/Infrastructure/Localization/en.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/en.lproj/Localizable.strings
@@ -121,3 +121,7 @@
 "week.friday" = "Fri";
 "week.saturday" = "Sat";
 "week.sunday" = "Sun";
+
+"search.search" = "Search";
+"search.cancel" = "Cancel";
+"search.tasksNotFound" = "Tasks not found";
