--- a/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
@@ -121,3 +121,7 @@
 "week.friday" = "Пт";
 "week.saturday" = "Сб";
 "week.sunday" = "Вс";
+
+"search.search" = "Поиск";
+"search.cancel" = "Отмена";
+"search.tasksNotFound" = "Задачи не найдены";
