--- a/TaskFl0w/Infrastructure/Localization/en.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/en.lproj/Localizable.strings
@@ -83,7 +83,7 @@
 
 
 "libraryOfWatchFaces.title" = "Library of watch faces";
-"libraryOfWatchFaces.category.classics" = "Сlassic";
+"libraryOfWatchFaces.category.classics" = "Detailed";
 "libraryOfWatchFaces.category.digital" = "Digital";
 "libraryOfWatchFaces.category.minimal" = "Minimal";
 
