--- a/TaskFl0w/Infrastructure/Localization/es.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/es.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "taskTimeLine.minutes" = "minutos";
 
 "libraryOfWatchFaces.title" = "Biblioteca de esferas";
-"libraryOfWatchFaces.category.classics" = "Clásico";
+"libraryOfWatchFaces.category.classics" = "Detallado";
 "libraryOfWatchFaces.category.digital" = "Digital";
 "libraryOfWatchFaces.category.minimal" = "Minimalista";
 
