--- a/TaskFl0w/Infrastructure/Localization/fr.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/fr.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "taskTimeLine.minutes" = "minutes";
 
 "libraryOfWatchFaces.title" = "Bibliothèque de cadrans";
-"libraryOfWatchFaces.category.classics" = "Classique";
+"libraryOfWatchFaces.category.classics" = "Détaillé";
 "libraryOfWatchFaces.category.digital" = "Numérique";
 "libraryOfWatchFaces.category.minimal" = "Minimaliste";
 
