--- a/TaskFl0w/Infrastructure/Localization/ja.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/ja.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "taskTimeLine.minutes" = "分";
 
 "libraryOfWatchFaces.title" = "ウォッチフェイスライブラリ";
-"libraryOfWatchFaces.category.classics" = "クラシック";
+"libraryOfWatchFaces.category.classics" = "詳細";
 "libraryOfWatchFaces.category.digital" = "デジタル";
 "libraryOfWatchFaces.category.minimal" = "ミニマル";
 
