--- a/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
@@ -82,7 +82,7 @@
 "taskTimeLine.minutes" = "мин";
 
 "libraryOfWatchFaces.title" = "Библиотека циферблатов";
-"libraryOfWatchFaces.category.classics" = "Классический";
+"libraryOfWatchFaces.category.classics" = "Детальный";
 "libraryOfWatchFaces.category.digital" = "Цифровой";
 "libraryOfWatchFaces.category.minimal" = "Минимализм";
 
