--- a/TaskFl0w/Infrastructure/Localization/zh-Hans.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/zh-Hans.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 "taskTimeLine.minutes" = "分钟";
 
 "libraryOfWatchFaces.title" = "表盘库";
-"libraryOfWatchFaces.category.classics" = "经典";
+"libraryOfWatchFaces.category.classics" = "详细";
 "libraryOfWatchFaces.category.digital" = "数字";
 "libraryOfWatchFaces.category.minimal" = "简约";
 
