--- a/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
+++ b/TaskFl0w/Infrastructure/Localization/ru.lproj/Localizable.strings
@@ -160,3 +160,5 @@
 "selectCategory.description.start" = "Давайте начнем вместе";
 "selectCategory.description.choose" = "Выберите наиболее подходящие категории для ваших задач. Позже вы сможете добавить свои.";
 "selectCategory.description.loading" = "Настройка категорий...";
+
+"task.newTask" = "Новая задача";
